<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_radius_dialog">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutName"
        style="@style/StyleInputTextLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5sp"
        android:hint="@string/edt_hint_name">

        <EditText
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:textColor="@color/white"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/layoutTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutName"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutWorkTime"
            style="@style/StyleInputTextLayout"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:layout_weight="1"
            android:hint="@string/edt_hint_work_time">

            <EditText
                android:id="@+id/edtWorkTime"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:textColor="@color/white"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutRestTime"
            style="@style/StyleInputTextLayout"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:layout_weight="1"
            android:hint="@string/edt_hint_rest_time">

            <EditText
                android:id="@+id/edtRestTime"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:textColor="@color/white"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutTime"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnAccept"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:layout_weight="1"
            android:background="@drawable/background_button_orange"
            android:text="@string/btn_text_accept" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:layout_weight="1"
            android:background="@drawable/background_button_trans"
            android:text="@string/btn_text_cancel"
            android:textColor="@color/white" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</RelativeLayout>