<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_radius_dialog">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutRound"
        style="@style/StyleInputTextLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5sp"
        android:hint="@string/edt_hint_round_of_training">

        <EditText
            android:id="@+id/edtTraining"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:background="@null"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutRound"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnAccept"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:layout_weight="1"
            android:background="@drawable/background_button_orange"
            android:text="@string/btn_text_accept" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:layout_weight="1"
            android:background="@drawable/background_button_trans"
            android:text="@string/btn_text_cancel"
            android:textColor="@color/white" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</RelativeLayout>